# roxi

./: PROJECT.md
lib/: Cargo.toml
lib/benches/: bench.rs  dialects.rs  hierarchies.rs
lib/src/: aggregation.rs  backwardchaining.rs  backwardchaining_test.rs  bindings.rs  csprite.rs  csprite_test.rs  datalog.rs  decode.rs  dred.rs  encoding.rs  imars_reasoner.rs  imars_window.rs  imars_window_test.rs  lib.rs  lib_test.rs  observer.rs  oxrdf_adapter.rs  parser.rs  pipeline.rs  queryengine.rs  reasoner.rs  registry.rs  rsp.rs  rsp_test.rs  rule.rs  ruleindex.rs  service_composition.rs  service_composition_test.rs  shacl.rs  shex.rs  shex_native.rs  shexc_parser.rs  sparql.rs  sparql_test.rs  term.rs  term_test.rs  time_window.rs  tripleindex.rs  tripleindex_test.rs  triples.rs  (+1 more)
lib/src/builtins/: builtins_test.rs  crypto.rs  func.rs  list.rs  log.rs  math.rs  mod.rs  string.rs  time.rs
lib/src/parser/: n3.pest  n3rule_parser.rs  n3rule_parser_test.rs  shexc.pest
lib/src/queryengine/: mod.rs
lib/src/reasoner/: log_collect_all_in.rs  log_conclusion.rs  log_for_all_in.rs  log_if_then_else_in.rs  log_implies.rs  log_includes.rs  log_not_includes.rs  mod.rs  reasoner_test.rs  substitution.rs
lib/src/rsp/: r2r.rs  r2s.rs  r2s_test.rs  s2r.rs  s2r_test.rs
lib/tests/: datalog_challenger.rs  datalog_conformance.rs  datalog_impossible.rs  datalog_negation.rs  datalog_stratification_fuzz.rs  datalog_stress.rs  n3_builtin_adversarial.rs  n3_builtin_combinatorics.proptest-regressions  n3_builtin_combinatorics.rs  n3_builtin_coverage.rs  n3_builtins.rs  n3_implies_fuzz.proptest-regressions  n3_implies_fuzz.rs  n3_impossible.rs  n3_literal_as_subject.rs  n3_new_builtins.rs  n3_parser.rs  n3_parser_roundtrip_fuzz.proptest-regressions  n3_parser_roundtrip_fuzz.rs  n3_scoping.rs  n3_stress.rs  n3_unsupported_builtin_guard.rs  oxrdf_adapter.rs  shacl_impossible.rs  shacl_nk_study.rs  shacl_sparql_stress.rs  shacl_stress.rs  shacl_validation.rs  shex_impossible.rs  shex_stress.rs  shex_validation.rs  shex_vocabulary_fuzz.rs  shexc_parser.rs
lib/tests/datalog_conformance/: aggregations.rs  mutual_recursion.rs  negation_cycle.rs  negation_stratum.rs  safe_unsafe_rejection.rs
lib/tests/datalog_conformance/mock_suite/: expected.ttl  rules.dl
lib/tests/n3_conformance/: README.md  SKIPPED.md  main.rs  manifest.json
lib/tests/n3_conformance/builtins/: crypto_sha256.n3  crypto_sha256_result.n3  (+134 more)
lib/tests/shacl_conformance/: main.rs  w3c_runner.rs
lib/tests/shex_conformance/: main.rs
lib/tests/sparql11_conformance/: manifest.json
server/: Cargo.toml
server/src/: main.rs
(+434 files in other folders)
