[package]
name = "roxi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
deepmesa-collections = "0.14.0"
bencher = "0.1.5"
log = { version = "0.4"}
env_logger = "0.11.11"
spargebra = { version = "0.4.6", features = ["sparql-12"] }
sparesults = { version = "0.3.3", features = ["sparql-12"] }


rio_api = "0.8.6"
rio_turtle = "0.8.6"
pest = "2.8.7"
pest_derive = "2.8.7"
either = "1.16.0"
once_cell = "1.21.4"
oxrdf = { version = "0.3.3", features = ["rdf-12"] }
regex = "1.10"
shex_validation = "0.3.6"
shex_ast = "0.3.6"
rudof_rdf = "0.3.6"
rudof_iri = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



[lib]
name = "minimal"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "hierarchies"
harness = false

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"