[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
pest = "2.8.7"
pest_derive = "2.8.7"
roxi = { path = "../lib" }

env_logger = "0.11.11"
log = "0.4"
profiling = "1.0.18"
spargebra = "0.4.6"


[features]
profile-with-puffin = ["profiling/profile-with-puffin"]


[profile.release]
lto = true
opt-level = 3


